# ai-watch

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.github/workflows/: daily.yml  pages.yml
briefings/: briefing-2026-02-24.md  briefing-2026-03-01.md  briefing-2026-03-02.md  briefing-2026-03-03.md  briefing-2026-03-04.md  briefing-2026-03-05.md  briefing-2026-03-07.md  briefing-2026-03-08.md  briefing-2026-03-09.md  briefing-2026-03-10.md  briefing-2026-03-11.md  briefing-2026-03-12.md  briefing-2026-03-13.md  briefing-2026-03-15.md  briefing-2026-03-16.md  briefing-2026-03-18.md  briefing-2026-03-20.md  briefing-2026-03-23.md  briefing-2026-03-24.md  briefing-2026-03-25.md  briefing-2026-03-26.md  briefing-2026-03-27.md  briefing-2026-03-28.md  briefing-2026-03-29.md  briefing-2026-03-31.md  briefing-2026-04-01.md  briefing-2026-04-02.md  briefing-2026-04-03.md  briefing-2026-04-06.md  briefing-2026-04-18.md  briefing-2026-04-19.md  briefing-2026-04-21.md  briefing-2026-04-24.md  briefing-2026-04-25.md  logs-2026-02-24.json  logs-2026-03-01.json  logs-2026-03-02.json  logs-2026-03-03.json  logs-2026-03-04.json  logs-2026-03-05.json  (+28 more)
prompts/: prompt-briefing.md  prompt-filter-github.md
scripts/: build_pages.py
src/agent/: nodes.py
